--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "webpack-merge": "^4.1.4"
   },
   "dependencies": {
-    "react": "^16.5.2"
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2"
   }
 }
