--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Ever Changing Company Hierarchy",
   "private": true,
   "scripts": {
-    "start": "webpack-dev-server --open --hot --progress --config webpack/webpack.dev.js",
+    "start": "webpack-dev-server --open --hot --config webpack/webpack.dev.js",
     "build": "webpack --config webpack/webpack.prod.js",
     "test": "npm run test"
   },
@@ -28,6 +28,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^1.0.0",
+    "html-webpack-plugin": "^3.2.0",
     "style-loader": "^0.23.0",
     "webpack": "^4.19.1",
     "webpack-cli": "^3.1.0",
