--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^1.0.0",
     "eslint": "^5.6.0",
+    "eslint-loader": "^2.1.1",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.9.3",
     "sass-loader": "^7.1.0",
