fix: adding some configuration to eslintrc.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,5 +2,9 @@
   "extends": [
     "airbnb-base",
     "plugin:react/recommended"
-  ]
+  ],
+  "env": {
+    "browser": true,
+    "node": true
+  }
 }
