feat: rimraf just installed on the project and clean just added to our scripts.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "webpack-dev-server --open --hot --config webpack/webpack.dev.js",
     "build": "webpack --config webpack/webpack.prod.js",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "clean" : "node scripts/clean.js"
   },
   "repository": {
     "type": "git",
@@ -64,7 +65,8 @@
     "react-transition-group": "^2.4.0",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
-    "redux-saga": "^0.16.0"
+    "redux-saga": "^0.16.0",
+    "rimraf": "^2.6.2"
   },
   "jest": {
     "setupTestFrameworkScriptFile": "./__tests__/setup/setupEnzyme.js",
