--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,7 @@
   },
   "rules": {
     "class-methods-use-this": "off",
-    "import/named": "off"
+    "import/named": "off",
+    "react/no-string-refs": "off"
   }
 }
