--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "stylelint": "^9.5.0",
     "stylelint-webpack-plugin": "^0.10.5",
     "webpack": "^4.19.1",
+    "webpack-bundle-analyzer": "^3.0.2",
     "webpack-cli": "^3.1.0",
     "webpack-dashboard": "^2.0.0",
     "webpack-dev-server": "^3.1.8",
