--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "jest": "^23.6.0",
     "node-sass": "^4.9.3",
     "redux-mock-store": "^1.5.3",
+    "redux-saga-test-plan": "^3.7.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.0",
     "stylelint": "^9.5.0",
